# cmd/api/docs/swagger.json
@@ -276,7 +276,7 @@
             "delete": {
                 "description": "Delete an existing coupon based on the provided code",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -764,12 +764,12 @@
                         "required": true
                     },
                     {
-                        "description": "JSON-encoded Product object to be edited",
-                        "name": "product",
+                        "description": "Product object to be edited",
+                        "name": "category",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/entity.Product"
                         }
                     }
                 ],
@@ -1122,85 +1122,6 @@
                 }
             }
         },
-        "/logout": {
-            "post": {
-                "description": "Deletes the authentication token cookie to log the user out",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "Logs out the user",
-                "responses": {
-                    "200": {
-                        "description": "user logged out successfully",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "cookie delete failed",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/order/payment/verify": {
-            "post": {
-                "description": "Verifies the payment for Razorpay based on the provided signature, Razorpay ID, and payment ID.",
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User Orders"
-                ],
-                "summary": "Verify payment for Razorpay",
-                "operationId": "verify-payment-razorpay",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Signature for payment verification",
-                        "name": "sign",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Razorpay ID",
-                        "name": "razorid",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Payment ID",
-                        "name": "paymentid",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Payment successful. Invoice details: {invoice}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/user/address": {
             "post": {
                 "description": "Adds a new address associated with the authenticated user",
@@ -1478,15 +1399,6 @@
                     "User Products"
                 ],
                 "summary": "Get the items in the user's cart",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "cartlist: []entity.CartItem",
@@ -1688,6 +1600,32 @@
                 }
             }
         },
+        "/user/logout": {
+            "post": {
+                "description": "Deletes the authentication token cookie to log the user out",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Logs out the user",
+                "responses": {
+                    "200": {
+                        "description": "user logged out successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "cookie delete failed",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/order/cancel/{orderid}": {
             "patch": {
                 "description": "Cancels an order based on the provided order ID.",
@@ -1870,6 +1808,59 @@
                 "responses": {
                     "200": {
                         "description": "Order status retrieved successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/payment/verify": {
+            "post": {
+                "description": "Verifies the payment for Razorpay based on the provided signature, Razorpay ID, and payment ID.",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Orders"
+                ],
+                "summary": "Verify payment for Razorpay",
+                "operationId": "verify-payment-razorpay",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Signature for payment verification",
+                        "name": "sign",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Razorpay ID",
+                        "name": "razorid",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Payment ID",
+                        "name": "paymentid",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Payment successful. Invoice details: {invoice}",
                         "schema": {
                             "type": "string"
                         }
@@ -2469,6 +2460,41 @@
                     "items": {
                         "$ref": "#/definitions/entity.User"
                     }
+                }
+            }
+        },
+        "entity.Product": {
+            "type": "object",
+            "required": [
+                "category",
+                "name",
+                "price",
+                "size"
+            ],
+            "properties": {
+                "category": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "imageurl": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "offerprice": {
+                    "type": "integer"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "removed": {
+                    "type": "boolean"
+                },
+                "size": {
+                    "type": "string"
                 }
             }
         },
